--- a/landev/styles.css
+++ b/landev/styles.css
@@ -12,8 +12,8 @@ body {
     text-align: right;
 }
 footer {
-    background-color: var(--primary-color);
-    color: white;
-    padding: 20px;
+    background-color: black ;
+    color: rgb(255, 255, 255);
+    padding: 100px;
     text-align: center;
 }
