--- a/landev/css/styles.css
+++ b/landev/css/styles.css
@@ -40,6 +40,52 @@ body {
 }
 
 
+.carousel-container {
+    position: relative;
+    width: 80%;
+    max-width: 1200px;  /* Aumentamos el ancho para que se vean 2 imágenes a la vez */
+    margin: 50px auto;
+}
+  
+.carousel {
+    overflow: hidden;
+}
+  
+.slides {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+  
+.slides img {
+    width: 50%; /* Mostrar 2 imágenes a la vez */
+    height: auto;
+    object-fit: cover;
+}
+  
+.arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(255, 255, 255, 0.5);
+    border: none;
+    font-size: 30px;
+    padding: 10px;
+    cursor: pointer;
+    color: white;
+}
+  
+.left-arrow {
+    left: 0;
+}
+  
+.right-arrow {
+    right: 0;
+}
+  
+.arrow:hover {
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
 
 footer {
     background-color: black ;
