--- a/landev/css/styles.css
+++ b/landev/css/styles.css
@@ -12,6 +12,66 @@ body {
     text-align: right;
 }
 
+nav ul{
+    justify-content: right;
+    margin-left: auto;
+    list-style: none;
+    display: flex;
+    gap: 20px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: var(--primary-color);
+}
+
+nav ul li a:hover{
+    color: var(--highlight-color);
+}
+
+.video-container {
+    position: relative;
+    width: 100%;
+    height: 60vh;
+    overflow: hidden;
+}
+
+video {
+    width: 100%;  
+    height: 100%;
+    object-fit: cover; /* Ajusta el video sin distorsión */
+}
+
+.overlay {
+    position: absolute;
+    top: 50%;
+    left: 30px;
+    margin-right: 40vh;
+    transform: translate(0, -50%);
+    text-align: left;
+}
+.overlay h2 {
+    color: white;
+    background-color: var(--primary-color-transparent);
+    padding: 6px 12px;
+    border-radius: 4px;
+    display: inline;
+    box-decoration-break: clone;
+    -webkit-box-decoration-break: clone;
+    line-height: 1.45;
+}
+
+.overlay button {
+    display: block;
+    background-color: var(--highlight-color);
+    color: white;
+    margin-top: 10px;
+    padding: 10px 20px;
+    border-radius: 50px;
+    font-size: 16px;
+    border: none;
+}
 
 .slider-container {
     width: 100%;
