--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,131 @@ video {
 }
 
 
+/* AQUI EMPIEZA SECCION CONTACTO Fondo de la sección de contacto */
+.contact-section {
+    position: relative;
+    height: 100vh;
+    background: url("img/contacto.jpg") no-repeat center center/cover;
+}
+
+/* Overlay para la transparencia */
+.overlaycontacto {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Fondo oscuro semitransparente */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 40px;
+}
+
+/* Contenido atractivo a la derecha */
+.content-right {
+    color: #ffffff;
+    max-width: 50%;
+    text-align: left;
+}
+
+.content-right h2 {
+    font-size: 2.5rem;
+    margin-bottom: 15px;
+}
+
+.content-right p {
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+}
+
+.content-right button {
+    background-color: #ff7b00;
+    color: #ffffff;
+    padding: 12px 25px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1.1rem;
+}
+
+.content-right button:hover {
+    background-color: #ee964b;
+}
+
+/* Formulario */
+.form-container {
+    text-align: center;
+    color: #ffffff;
+    max-width: 450px;
+    background-color: rgba(0, 0, 0, 0.7); /* Fondo negro trasparente */
+    padding: 30px;
+    border-radius: 10px;
+}
+
+.form-container h2 {
+    font-size: 2rem;
+    margin-bottom: 15px;
+}
+
+.form-container p {
+    font-size: 1.1rem;
+    margin-bottom: 25px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+input, textarea {
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    margin: 5px 0;
+    font-size: 1rem;
+    color: #333;
+}
+
+button {
+    background-color: #ee964b;
+    color: #fff;
+    padding: 12px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1.1rem;
+}
+
+button:hover {
+    background-color: #ee964b;
+}
+
+.cta-section {
+    text-align: center;
+    padding: 40px 20px;
+    background-color: #f4f4f4; /* Fondo suave para la sección */
+    margin-bottom: 30px;
+    color: #0D3B66;
+}
+
+.cta-section p {
+    font-size: 1.2em;
+    margin-bottom: 20px;
+}
+
+.cta-section button {
+    padding: 10px 20px;
+    background-color: #ee964b;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-size: 1em;
+}
+
+
+
 footer {
     background-color: black ;
     color: rgb(255, 255, 255);
